results/scraper/box64/1986
Build regression (unable to build gcc-8)
```
 /__w/box64-debs/box64-debs/box64/src/wrapped/wrappedbrotlidec.c: In function 'my_BrotliDecoderCreateInstance':
/__w/box64-debs/box64-debs/box64/src/wrapped/wrappedbrotlidec.c:125:45: error: parameter name omitted
 EXPORT void* my_BrotliDecoderCreateInstance(x64emu_t, void* m, void* f, void* d)
                                             ^~~~~~~~
make[2]: *** [CMakeFiles/box64.dir/src/wrapped/wrappedbrotlidec.c.o] Error 1
make[2]: *** Waiting for unfinished jobs....
CMakeFiles/box64.dir/build.make:4681: recipe for target 'CMakeFiles/box64.dir/src/wrapped/wrappedbrotlidec.c.o' failed
```